2008-08-05  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-with-output-to-temp-buffer): Make sure that we
	don't make the wrong buffer read-only.

	* swank-lispworks.lisp (make-stream-interactive): Run our own
	thread to periodically flush streams instead of relying on
	soft-force-output.

	* swank.lisp (encode-message): Inhibit interrupts
	while writing the length and the body.

	* swank-backend.lisp (make-recursive-lock)
	(call-with-recursive-lock-held): Deleted.  Make the default locks
	"recursive" instead.
	(thread-id): Add a default implementation which works
	with the default implementation of current-thread.

	* swank-gray.lisp (stream-write-string): New method.

	* swank-backend.lisp (*gray-stream-symbols*): Include
	write-string.

2008-08-04  Helmut Eller  <heller@common-lisp.net>

	* swank-gray.lisp (slime-output-stream): Undo last change.
	Make force-output and finish-output do the same.

2008-08-04  Masayuki Onjo <masayuki.onjo@gmail.com>

	Updates for CLISP-2.46.

	* swank-clisp.lisp (fspec-pathname, fspec-location): The structure
	of (documentation symbol 'sys::file) used to be (path . lines)
	but is now ((type path . lines) ...).

2008-08-04  Helmut Eller  <heller@common-lisp.net>

	* swank-gray.lisp (slime-output-stream): Add a slot
	"interactive-p" which should be true for streams which are flushed
	periodically by the Lisp system.  Update the relevant backends
	accordingly.

	* swank-scl.lisp (receive-if): Implemented.

	* swank-cmucl.lisp (receive,receive-if): Test for new messages in
	a loop.

	* swank.lisp (eval-for-emacs): Don't flush streams here as that
	may now block.

	* swank-lispworks.lisp (receive-if): Handle interrupts.

	* slime.el (slime-repl-clear-buffer): Delete stuff after the
	prompt too.
	(slime-with-output-to-temp-buffer): Add read-only argument.
	(slime-temp-buffer): Renamed from slime-get-temp-buffer-create.
	Drop noselect argument.

2008-08-03  Helmut Eller  <heller@common-lisp.net>

	Add some flow-control.
